--- a/environment_py2.yml
+++ b/environment_py2.yml
@@ -11,6 +11,7 @@ channels:
 # ESMVALTOOL DEPENDENCIES
 
 dependencies:
+- python=2.7
 # Needed by main, preprocessor, workflow, one or more diagnostics, shared diagnostic code.
 - basemap
 - cartopy
@@ -20,8 +21,8 @@ dependencies:
 - iris
 - ncl
 # ncl pacch
-- poppler=0.52 
-- xerces-c=3.1 
+- poppler=0.52
+- xerces-c=3.1
 - gsl
 # ncl patch end
 - netcdf4
