--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,6 @@ test-reports/
 doc/sphinx/source/diag_scripts/**
 doc/sphinx/source/plot_scripts/**
 doc/sphinx/build
+
+# Outputs
+esmvaltool_output/
