--- a/esmvaltool/namelists/namelist_perfmetrics_CMIP5_test.yml
+++ b/esmvaltool/namelists/namelist_perfmetrics_CMIP5_test.yml
@@ -24,7 +24,7 @@
 
 models:
   - {model: MPI-ESM-LR,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 2000, end_year: 2001}
-  - {model: MPI-ESM-MR,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 2000, end_year: 2001}
+#  - {model: MPI-ESM-MR,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 2000, end_year: 2001}
 
 preprocessors:
   pp850:
@@ -32,16 +32,17 @@ preprocessors:
       levels: 85000
       scheme: linear
     regrid:
-      target_grid: ERA-Interim
+      target_grid: reference_model
       scheme: linear
     mask_fillvalues:
       threshold_fraction: 0.95
-    multi_model_mean:
-      span: overlap #or full
-      exclude: {GFDL-ESM2G}
+    multi_model_statistics:
+      span: overlap
+      statistics: [mean, median]
+      exclude: [reference_model, alternative_model]
 
 diagnostics:
-  ta_850_global:
+  ta850:
     description: Air temperature at 850 hPa global.
     variables:
       ta:
@@ -54,35 +55,30 @@ diagnostics:
       - {model: ERA-Interim,  project: OBS,  type: reanaly,  version: 1,  start_year: 2000,  end_year: 2001,  tier: 3}
       - {model: NCEP,         project: OBS,  type: reanaly,  version: 1,  start_year: 2000,  end_year: 2001,  tier: 2}
     scripts:
-      main: &main_script_settings
-        script: perfmetrics_main.ncl
+      cycle: &cycle_settings
+        script: perfmetrics/main.ncl
         plot_type: cycle       # Plot type ('cycle' [time], 'zonal' [plev, lat], 'latlon' [lat, lon], 'cycle_latlon' [time, lat, lon])
         time_avg: monthlyclim  # Time average ('opt' argument of time_operations.ncl)
         region: Global         # Selected region ('Global', 'Tropics', 'NH extratropics', 'SH extratropics')
         plot_stddev: ref_model # Plot standard deviation ('all', 'none', 'ref_model' or given model name)
         legend_outside: true   # Plot legend in a separate file
         styleset: CMIP5        # Plot style
-      main_grading: &main_grading_script_settings
-        <<: *main_script_settings
-        plot_type: cycle_latlon        # Plot type ('cycle' [time], 'zonal' [plev, lat], 'latlon' [lat, lon], 'cycle_latlon' [time, lat, lon])
-        draw_plots: false              # Do not draw plots
-        calc_grading: true             # Calculate grading
-        metric: RMSD                   # Metric ('RMSD', 'BIAS', taylor')
-        normalization: centered_median # Normalization ('mean', 'median', 'centered_median')
-        MultiModelMean: true           # Multi-model mean
-        MultiModelMedian: true         # Multi-model median
-      main_taylor: &main_taylor_script_settings
-        <<: *main_grading_script_settings
-        metric: taylor                 # Metric ('RMSD', 'BIAS', taylor')
+      grading: &grading_settings
+        <<: *cycle_settings
+        plot_type: cycle_latlon                # Plot type ('cycle' [time], 'zonal' [plev, lat], 'latlon' [lat, lon], 'cycle_latlon' [time, lat, lon])
+        draw_plots: false                      # Do not draw plots
+        calc_grading: true                     # Calculate grading
+        metric: [RMSD, taylor]                 # Metric ('RMSD', 'BIAS', taylor')
+        normalization: [centered_median, none] # Normalization ('mean', 'median', 'centered_median', 'none')
 
-  grading_collect:
-    description: Wrapper to collect and plot previously calculated gradings.
-    scripts:
-      grading_collect:
-        script: perfmetrics_grading_collect.ncl
-        ancestors: ['*/main_grading']
-        label_bounds: [-0.5, 0.5]
-        label_scale: 0.1
-        disp_values: false
-        cm_interval: [2, 241]
-        sort: true  # Sort model in alphabetic order (excluding MMM)
+  # grading_collect:
+  #   description: Wrapper to collect and plot previously calculated gradings.
+  #   scripts:
+  #     grading_collect:
+  #       script: perfmetrics_grading_collect.ncl
+  #       ancestors: ['*/main_grading']
+  #       label_bounds: [-0.5, 0.5]
+  #       label_scale: 0.1
+  #       disp_values: false
+  #       cm_interval: [2, 241]
+  #       sort: true  # Sort model in alphabetic order (excluding MMM)
